...
    symbolAfterAmount: true,
    decimalDigits: 2,
    denominations: [
      20000,
      10000,
      5000,
      2000,
      1000,
      500,
      200,
      100,
      50,
      20,
      10,
      5,
      2,
      1,
    ],
  ),
...
